receive info in the backend

--- a/extension/hello.html
+++ b/extension/hello.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
 <html>
 
+<head>
+  <title>Send Data</title>
+</head>
+
 <body>
-  <h1>Hello Extensions</h1>
+  <h1>Send Data to Haskell Server</h1>
+  <button id="sendData">Send</button>
   <script src="popup.js"></script>
 </body>
 
