--- a/extension/animation.html
+++ b/extension/animation.html
@@ -16,15 +16,18 @@
     }
 
     #image-container {
-      max-width: 80%;
-      max-height: 80%;
+      width: 100%;
+      height: 100%;
       transition: opacity 1s ease-in-out;
       opacity: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     img {
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
       object-fit: contain;
     }
   </style>
