--- a/extension/animation.html
+++ b/extension/animation.html
@@ -2,31 +2,41 @@
 <html>
 
 <head>
-  <title>Image Grid</title>
+  <title>Image Animation</title>
   <style>
-    /* Basic styling for the grid; customize as needed */
-    #imageGrid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      /* Adjust size as needed */
-      gap: 10px;
-      /* Adjust gap between images as needed */
-      padding: 10px;
-      max-width: 100vw;
-      margin: auto;
+    body,
+    html {
+      height: 100%;
+      margin: 0;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #000;
+    }
+
+    #image-container {
+      width: 100%;
+      height: 100%;
+      transition: opacity 1s ease-in-out;
+      opacity: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      /* Adjust how images fit within their boxes */
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
     }
   </style>
 </head>
 
 <body>
-  <div id="imageGrid"></div> <!-- Grid container for images -->
+  <div id="image-container">
+  </div>
+
   <script src="animation.js"></script>
 </body>
 
