--- a/extension/animation.html
+++ b/extension/animation.html
@@ -7,6 +7,7 @@
     body,
     html {
       height: 100%;
+      width: 100%;
       margin: 0;
       overflow: hidden;
       display: flex;
@@ -22,7 +23,7 @@
       opacity: 0;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: stretch;
     }
 
     img {
