--- a/extension/animation.html
+++ b/extension/animation.html
@@ -31,6 +31,19 @@
       max-height: 100%;
       object-fit: contain;
     }
+    
+    .reactions {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 14px;
+      z-index: 1;
+    }
   </style>
 </head>
 
