Rename to slideshow

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Send Image URL</title>
+  <title>Start Slideshow</title>
 </head>
 
 <body>
-  <button id="sendUrl">Send Image URL</button>
+  <button id="startSlideshow">Start slideshow</button>
   <script src="popup.js"></script>
 </body>
 
