--- a/extension/slideshow.html
+++ b/extension/slideshow.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Image Animation</title>
+  <title>Slideshow</title>
   <style>
     body,
     html {
@@ -51,7 +51,7 @@
   <div id="image-container">
   </div>
 
-  <script src="animation.js"></script>
+  <script src="slideshow.js"></script>
 </body>
 
 </html>
